--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "unipay"
-version = "0.1.7.post1"
+version = "0.1.8"
 description = ""
 authors = [{ name = "djkcyl", email = "cyl@cyllive.cn" }]
 dependencies = [
