--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 *.db
+
+node_modules/
+/qrcode
+/skia
+output.png
+test.py
